# lakedrive

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Makefile-tests  README.md  README.rst  conftest.py  mypy.ini  pyproject.toml  pytest.ini
docker/: docker-compose.yml
docker/docs/: Dockerfile
docker/docs/app/: main.py
docker/minio/: Dockerfile
docker/tests/: Dockerfile
docs/source/: conf.py  index.rst
docs/source/docstring/: delete.rst  get.rst  modules.rst  put.rst
src/lakedrive/: __init__.py  __main__.py  about.py  api.py  cli.py
src/lakedrive/core/: __init__.py  handlers.py  list_filter.py  objects.py  sync.py
src/lakedrive/httplibs/: connection.py  helpers.py  (+2 more)
tests/: conftest.py  test_api.py  test_cli.py  test_lakedrive.py
tests/core/: conftest.py  test___init__.py  test_core_handler.py  test_core_objects.py  test_list_filter.py  test_sync.py
tests/helpers/: async_parsers.py  generate_files.py  generate_objects.py  generate_s3_list.py  http_connection.py  http_responses.py  misc.py  mock_classes.py  object_store.py  validators.py
tests/httplibs/: test_connection.py  test_httplibs_helpers.py  test_objects.py  test_request.py
tests/localfs/: helpers.py  test_cli_methods.py  test_localfs_files.py  test_localfs_handler.py
tests/s3/: conftest.py  fake_s3_objects.py  test_s3_bucket.py  test_s3_files.py  test_s3_handler.py  test_s3_objects.py  test_xmlparse.py
tests/templates/: cli_methods.py  object_store_handler.py
tests/utils/: test_event_loop.py  test_executors.py  test_formatters.py  test_utils_helpers.py
(+12 files in other folders)
