[tool.poetry]
name = "lakedrive"
version = "0.80.0"
description = ""
authors = ["Anthony Potappel <anthonyp@lakeclub.net>"]

packages = [
    { include = "lakedrive", from = "src" },
    { include = "lakedrive/py.typed", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
coverage = "^6.3.3"
pre-commit = "^2.19.0"
Faker = "^13.12.0"
Sphinx = "^5.1.1"
sphinx-rtd-theme = "^1.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
